<resources>
    <string name="app_name">PhoneApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">設定</string>
    <string name="text_mojicount">文字数</string>
    <string name="text_phoneBook">電話帳</string>
    <string name="text_resistNumOnBook">番号を電話帳に登録</string>
    <string name="text_vibration">ボタンの振動</string>
    <string name="text_searchOnTheWeb">ネットで検索</string>
    <string name="text_displaySettings">画面の明るさ調整</string>
    <string name="text_customButton">カスタムボタン</string>
    <string name="text_message_ClearDone">クリアしました</string>
    <string name="title_activity_preference">PreferenceActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
